--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 <body>
 
-<div class="container p-5 bg-dark text-white text-center">
-  <h1>Crush Page</h1>
-  <p class="description">Put our name here to showing our love!</p> 
+<div class="container p-4 bg-dark text-white text-center">
+  <h1 class="pacifico putih">Taman Hati</h1>
+  <p class="description lovers-quarrel putih">Put our name here to showing our love!</p> 
 </div>
   
 <div class="container">
@@ -41,38 +41,38 @@
 
     <div class="col-sm-4 mt-2">
         <div class="card abc123">
-            <div class="card-body text-center">zahiruddin <i class="fas fa-heart" style="color: #da6262;"></i> nur ain</div>
+            <div class="card-body text-center">Hafiz <i class="fas fa-heart" style="color: #da6262;"></i> Farah</div>
         </div>
     </div>
 
     <div class="col-sm-8 mt-2">
         <div class="card def123">
-            <div class="card-body text-center">arifuddin <i class="fas fa-heart" style="color: #eda2c0;"></i> lecturel</div>
+            <div class="card-body text-center">Syahirah <i class="fas fa-heart" style="color: #eda2c0;"></i> Imran</div>
         </div>
     </div>
 
 
     <div class="col-sm-8 mt-2">
         <div class="card jkl123">
-            <div class="card-body text-center">adam <i class="fas fa-heart-broken" style="color: #da6262;"></i> wahida</div>
+            <div class="card-body text-center">Adam <i class="fas fa-heart-broken" style="color: #da6262;"></i> Wahida</div>
         </div>
     </div>
 
     <div class="col-sm-4 mt-2">
         <div class="card abc456">
-            <div class="card-body text-center">Hazirah <i class="fas fa-heart" style="color: #da6262;"></i> Khalid</div>
+            <div class="card-body text-center">Izzaty <i class="fas fa-heart" style="color: #da6262;"></i> Haiqal</div>
         </div>
     </div>
 
     <div class="col-sm-4 mt-2">
         <div class="card ghi123">
-            <div class="card-body text-center">ajimmm <i class="fas fa-heart fa-xs" style="color: #da6262;"></i> suraya</div>
+            <div class="card-body text-center">Zack <i class="fas fa-heart fa-xs" style="color: #da6262;"></i> Diana</div>
         </div>
     </div>
 
     <div class="col-sm-4 mt-2">
         <div class="card abc789">
-            <div class="card-body text-center">Hanif <i class="fas fa-heart" style="color: #eda2c0;"></i> Awin</div>
+            <div class="card-body text-center">Sofia <i class="fas fa-heart" style="color: #eda2c0;"></i> Naim</div>
         </div>
     </div>
 
