--- a/katalog.html
+++ b/katalog.html
@@ -287,7 +287,7 @@
     </table>
 
     <label for="result-text" class="form-label h3">Result</label>
-    <textarea class="form-control" id="result-text" rows="6"></textarea>
+    <textarea class="form-control" id="result-text" rows="7"></textarea>
     <span id="copy"></span>
     <button type="button" class="btn btn-primary mt-2" onclick="copyfunc()">copy result</button>
 
@@ -355,6 +355,7 @@ $(document).ready(function(){
     $('#result-text').append("\nsize: "+ ' ' + fontsize);
     $('#result-text').append("\ncolour: "+ ' ' + textcolor);
     $('#result-text').append("\nbackground: "+ ' ' + backgroundclr);
+    $('#result-text').append("\nSet Item to: "+ ' ' + bilangan_char);
     $('#result-text').append("\nRM: "+ ' ' + harga);
   }
 
