--- a/katalog.html
+++ b/katalog.html
@@ -355,7 +355,7 @@ $(document).ready(function(){
     $('#result-text').append("\nsize: "+ ' ' + fontsize);
     $('#result-text').append("\ncolour: "+ ' ' + textcolor);
     $('#result-text').append("\nbackground: "+ ' ' + backgroundclr);
-    $('#result-text').append("\nSet Item to: "+ ' ' + bilangan_char);
+    $('#result-text').append("\nSet Item to: "+ ' ' + String(bilangan_char));
     $('#result-text').append("\nRM: "+ ' ' + harga);
   }
 
